# react-native-wav-to-mp3

./: .gitignore  .npmignore  README.md  RNWavToMp3.podspec  package-lock.json  package.json  tsconfig.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  wav_to_mp3.cpp
android/src/main/cpp/lame/: lame.h
android/src/main/java/com/wavtomp3/: WavToMp3Module.kt  WavToMp3Package.kt
ios/: WavToMp3.h  WavToMp3.mm
lib/: index.d.ts  index.js
src/: index.ts
